# libetw

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demomain.cpp
include/: etw_kernel_trace.h  etw_providers.h
include/etw/: etw_providers.h  etw_utils.h
src/: CMakeLists.txt  dns_trace.cpp  etw_network.h  etw_processes.h  etw_session_base.h  etw_userdata_reader.h  eventmeta.cpp  fileio_trace.cpp  ipc_trace.cpp  kernel_trace.cpp  usb_trace.cpp  utils.cpp  utils.h  volume_trace.cpp
tests/: CMakeLists.txt  dnstests.cpp  testmain.cpp  utiltests.cpp
