CMAKE_MINIMUM_REQUIRED(VERSION 2.7)

set (PROJECT_NAME libetw-project)
PROJECT(${PROJECT_NAME})

set(CMAKE_SUPPRESS_REGENERATION true)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_EXTENSIONS OFF) # want c++11 not gnu++11


set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -DNDEBUG -MT ")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS} -DNDEBUG -DRELDBG=1 -MT -Zi ")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG=1 -MTd ")

add_subdirectory(src)
add_subdirectory(demo)

if($ENV{MAKE_TESTS})
  set(GTEST_DIR $ENV{GTEST_DIR})
  add_subdirectory(tests)
endif()
